--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
+            <artifactId>hibernate-core</artifactId>
             <version>5.6.14.Final</version>
         </dependency>
         <dependency>
@@ -52,7 +52,7 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+       <!-- <dependency>
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
             <version>3.10.8</version>
@@ -63,7 +63,7 @@
             <artifactId>hibernate-ehcache</artifactId>
             <version>5.6.14.Final</version>
         </dependency>
-
+-->
     </dependencies>
 
 
